--- a/src/convertidoralura/Layout.fxml
+++ b/src/convertidoralura/Layout.fxml
@@ -17,7 +17,7 @@
          <children>
             <Button id="tabContainer" contentDisplay="TOP" layoutX="14.0" layoutY="14.0" onAction="#setConversorMonedas" prefHeight="40.0" prefWidth="204.0" text="Monedas" textAlignment="RIGHT" textOverrun="CLIP" />
             <Button id="tabContainer" layoutX="14.0" layoutY="14.0" onAction="#setConversorPesos" prefHeight="40.0" prefWidth="208.0" text="Peso" />
-            <Button id="tabContainer" layoutX="14.0" layoutY="14.0" onAction="#setConversorLongitud" prefHeight="40.0" prefWidth="208.0" text="Logitud" />
+            <Button id="tabContainer" layoutX="14.0" layoutY="14.0" onAction="#setConversorLongitud" prefHeight="40.0" prefWidth="208.0" text="Longitud" />
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -53,7 +53,7 @@
             </Button>
             <Pane layoutX="26.0" layoutY="231.0" prefHeight="45.0" prefWidth="361.0" style="-fx-background-color: #fff;">
                <children>
-                  <Text fx:id="textResultado" layoutX="14.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1 USD = 18.33 MX">
+                  <Text fx:id="textResultado" layoutX="14.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1 USD = 16.75 MX">
                      <font>
                         <Font name="Arial" size="12.0" />
                      </font>
